<resources>
    <string name="app_name">SpaceX</string>
    <string name="mission_name">Mission:</string>
    <string name="flight_number">Flight number:</string>
    <string name="rocket">Rocket:</string>
    <string name="launch_success">Launch success:</string>
    <string name="failure_details">Failure details:</string>

    <string name="title_name">Name:</string>
    <string name="title_type">Type:</string>
    <string name="title_time">Time:</string>
    <string name="title_reason">Reason:</string>
    <string name="title_details">Details:</string>
</resources>
